--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PrivateEvents</title>
+    <title>Private Events</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <nav class="navbar">
+      <div class="navbar-home">
+        <div class="navbar-title"></div>
+      </div>
+      <div class="navbar-options">
+        <%= button_to 'Sign In', '/', class: 'navbar-option' %>
+      </div>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
