--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    font-family: 'Akshar', serif;
     --main-color: rgb(94, 11, 116);
     --secondary-color: rgb(214, 96, 247);
     --extra-color-1: rgb(197, 22, 245);
@@ -25,12 +26,17 @@ body {
     --extra-color-3: rgb(156, 17, 194);
 }
 
+main {
+    padding: 2vh 3vw;
+}
+
 .navbar {
     height: 10vh;
     padding: 0 1vw;
     background-color: var(--main-color);
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 2fr 3fr 2fr;
+    align-items: center;
 }
 
 .navbar-home {
@@ -39,4 +45,26 @@ body {
 
 .navbar-options {
     grid-column: 3 / 4;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
+    column-gap: 1vw;
+    justify-items: center;
+}
+
+.navbar-title {
+    font-size: 2rem;
+    color: white;
+    text-decoration: none;
+}
+
+.navbar-option {
+    margin: 0;
+    padding: 2vh 2vw;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--secondary-color);
+    font-family: inherit;
+    color: white;
+    text-decoration: none;
+    text-align: center;
 }
