--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,12 @@
         <div class="events-container">
             <% current_user.events.each do |event| %>
                 <div class="event-container">
-                    <div class="event-title"></div>
-                    <div class="event-description"></div>
-                    <div class="event-location"></div>
-                    <div class="event-date"></div>
+                    <div class="event-title"><%= event.name %></div>
+                    <div class="event-description"><%= event.description %></div>
+                    <div class="event-geo">
+                        <div class="event-location"><%= event.location %></div>
+                        <div class="event-date"><%= event.date %></div>
+                    </div>
                     <%= link_to 'Event details', event_path(event.id), class: 'event-details' %>
                 </div>
             <% end %>
