--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -35,6 +35,7 @@
 .event-title {
     font-size: 1.5rem;
     color: var(--extra-color-3);
+    text-decoration: none;
 }
 
 .event-description {
@@ -46,6 +47,17 @@
     grid-template-columns: 1fr 1fr;
 }
 
-.event-details {
-    color: var(--secondary-color);
+.event-option-form {
+    margin-top: 2vh;
+    padding: 0;
+}
+
+.event-option {
+    padding: 1vh 1vw;
+    font-family: 'Akshar', serif;
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 1rem;
 }
