--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,17 +1,19 @@
 <h1>Check our upcoming events</h1>
-<% if current_user.events.empty? %>
+<% if @events.empty? %>
   <div class="empty-message">There are no events at the moment.</div>
 <% else %>
   <div class="events-container">
-    <% current_user.events.each do |event| %>
+    <% @events.each do |event| %>
       <div class="event-container">
-        <div class="event-title"><%= event.name %></div>
+        <%= link_to event.name, event_path(event.id), class: 'event-title' %>
         <div class="event-description"><%= event.description %></div>
         <div class="event-geo">
           <div class="event-location"><%= event.location %></div>
           <div class="event-date"><%= event.date %></div>
         </div>
-        <%= link_to 'Event details', event_path(event.id), class: 'event-details' %>
+        <% if user_signed_in? %>
+          <%= button_to 'Attend event', attend_events_path, class: 'event-option', form_class: 'event-option-form', params: { event: event.id }  %>
+        <% end %>
       </div>
     <% end %>
   </div>
