--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -2,12 +2,15 @@
     display: grid;
     grid-template-rows: 1fr auto;
     justify-items: center;
+    row-gap: 2vh;
 }
 
-.event-display {
+.event-display,
+.event-attendees {
     padding: 1vh 1vw;
-    border: 6px solid var(--secondary-color);
+    border: 3px solid var(--secondary-color);
     border-radius: 10px;
+    width: 40%;
 }
 
 .event-field {
@@ -60,4 +63,13 @@
     border-radius: 10px;
     color: white;
     font-size: 1rem;
+}
+
+.no-attendee {
+    font-size: 1rem;
+}
+
+.event-attendee {
+    font-size: 1rem;
+    font-weight: bold;
 }
