--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,6 +53,7 @@
                         <div class="event-location"><%= event.location %></div>
                         <div class="event-date"><%= event.date %></div>
                     </div>
+                    <%= link_to 'Cancel Attendance', attend_event_path(event.id), data: { turbo_method: :delete }, class: 'event-action' %>
                 </div>
             <% end %>
         </div>
